# zikkurat-algebra

./: .gitignore  README.md  build.sh  cabal.project  clean.sh
codegen/: CODEGEN.md  zikkurat-algebra-codegen.cabal
codegen/cli/: Main.hs
codegen/src/Zikkurat/: Generate.hs
codegen/src/Zikkurat/CodeGen/: BigInt.hs  ExtField.hs  FFI.hs  FieldCommon.hs  Misc.hs  Platform.hs  Pointwise.hs  Poly.hs  Towers.hs
codegen/src/Zikkurat/CodeGen/Curve/: CurveFFI.hs  FFT.hs  MSM.hs  MontAffine.hs  MontJac.hs  MontProj.hs  Pairing.hs  Params.hs  ReExport.hs  Shared.hs
codegen/src/Zikkurat/CodeGen/PrimeField/: FieldCommon.hs  Montgomery.hs  StdRep.hs
docs/: .gitignore  algebraic_primitives.tex
examples/: KZG.hs  MSM.hs  poseidon2.c
lib/: LICENSE-APACHE-2.0  Setup.hs  zikkurat-algebra.cabal
lib/cbits/: platform.c  platform.h
lib/cbits/bigint/: bigint128.c  bigint128.h  bigint192.c  bigint192.h  bigint256.c  bigint256.h  bigint320.c  bigint320.h  bigint384.c  bigint384.h  bigint448.c  bigint448.h  bigint512.c  bigint512.h  bigint576.c  bigint576.h  bigint640.c  bigint640.h  bigint704.c  bigint704.h  bigint768.c  bigint768.h
lib/cbits/curves/array/mont/: bls12_381_arr_mont.c  bls12_381_arr_mont.h  bn128_arr_mont.c  bn128_arr_mont.h
lib/cbits/curves/fields/mont/: bls12_381_Fp12_mont.c  bls12_381_Fp12_mont.h  bls12_381_Fp2_mont.c  bls12_381_Fp2_mont.h  bls12_381_Fp6_mont.c  bls12_381_Fp6_mont.h  bls12_381_Fp_mont.c  bls12_381_Fp_mont.h  bls12_381_Fr_mont.c  bls12_381_Fr_mont.h  bls12_381_p_mont.c  bls12_381_p_mont.h  bls12_381_r_mont.c  bls12_381_r_mont.h  bn128_Fp12_mont.c  bn128_Fp12_mont.h  bn128_Fp2_mont.c  bn128_Fp2_mont.h  bn128_Fp6_mont.c  bn128_Fp6_mont.h  bn128_Fp_mont.c  bn128_Fp_mont.h  bn128_Fr_mont.c  bn128_Fr_mont.h  bn128_p_mont.c  bn128_p_mont.h  bn128_r_mont.c  bn128_r_mont.h
lib/cbits/curves/fields/std/: bls12_381_Fp_std.c  bls12_381_Fp_std.h  bls12_381_Fr_std.c  bls12_381_Fr_std.h  bls12_381_p_std.c  bls12_381_p_std.h  bls12_381_r_std.c  bls12_381_r_std.h  bn128_Fp_std.c  bn128_Fp_std.h  bn128_Fr_std.c  bn128_Fr_std.h  bn128_p_std.c  bn128_p_std.h  bn128_r_std.c  bn128_r_std.h
lib/cbits/curves/g1/affine/: bls12_381_G1_affine.c  bls12_381_G1_affine.h  bn128_G1_affine.c  bn128_G1_affine.h
lib/cbits/curves/g1/jac/: bls12_381_G1_jac.c  bls12_381_G1_jac.h  bn128_G1_jac.c  bn128_G1_jac.h
lib/cbits/curves/g1/proj/: bls12_381_G1_affine.h  bls12_381_G1_proj.c  bls12_381_G1_proj.h  bn128_G1_proj.c  bn128_G1_proj.h
lib/cbits/curves/g2/affine/: bls12_381_G2_affine.c  bls12_381_G2_affine.h  bn128_G2_affine.c  bn128_G2_affine.h
lib/cbits/curves/g2/proj/: bls12_381_G2_proj.c  bls12_381_G2_proj.h  bn128_G2_proj.c  bn128_G2_proj.h
lib/cbits/curves/pairing/: bls12_381_pairing.c  bls12_381_pairing.h  bn128_pairing.c  bn128_pairing.h
lib/cbits/curves/poly/mont/: bls12_381_poly_mont.c  bls12_381_poly_mont.h  bn128_poly_mont.c  bn128_poly_mont.h
lib/src/ZK/Algebra/: API.hs  Helpers.hs
lib/src/ZK/Algebra/BigInt/: BigInt128.hs  BigInt192.hs  BigInt256.hs  BigInt320.hs  BigInt384.hs  BigInt448.hs  BigInt512.hs  BigInt576.hs  BigInt640.hs  BigInt704.hs  BigInt768.hs  Platform.hs  Types.hs
lib/src/ZK/Algebra/Class/: Curve.hs  FFT.hs  Field.hs  Flat.hs  Misc.hs  Pairing.hs  Poly.hs  Vector.hs
lib/src/ZK/Algebra/Curves/: BLS12_381.hs  BN128.hs
lib/src/ZK/Algebra/Curves/BLS12_381/: Array.hs  Pairing.hs  Poly.hs
lib/src/ZK/Algebra/Curves/BLS12_381/Fp/: Mont.hs  Std.hs
lib/src/ZK/Algebra/Curves/BLS12_381/Fp12/: Mont.hs
lib/src/ZK/Algebra/Curves/BLS12_381/Fp2/: Mont.hs
lib/src/ZK/Algebra/Curves/BLS12_381/Fp6/: Mont.hs
lib/src/ZK/Algebra/Curves/BLS12_381/Fr/: Mont.hs  Std.hs
lib/src/ZK/Algebra/Curves/BLS12_381/G1/: Affine.hs  Affine.hs-boot  Jac.hs  Proj.hs
lib/src/ZK/Algebra/Curves/BLS12_381/G2/: Affine.hs  Affine.hs-boot  Proj.hs
lib/src/ZK/Algebra/Curves/BLS12_381/Mont/: Fp.hs  Fr.hs
lib/src/ZK/Algebra/Curves/BLS12_381/Std/: Fp.hs  Fr.hs
lib/src/ZK/Algebra/Curves/BN128/: Array.hs  Pairing.hs  Poly.hs
lib/src/ZK/Algebra/Curves/BN128/Fp/: Mont.hs  Std.hs
lib/src/ZK/Algebra/Curves/BN128/Fp12/: Mont.hs
lib/src/ZK/Algebra/Curves/BN128/Fp2/: Mont.hs
lib/src/ZK/Algebra/Curves/BN128/Fp6/: Mont.hs
lib/src/ZK/Algebra/Curves/BN128/Fr/: Mont.hs  Std.hs
lib/src/ZK/Algebra/Curves/BN128/G1/: Affine.hs  Affine.hs-boot  Jac.hs  Proj.hs
lib/src/ZK/Algebra/Curves/BN128/G2/: Affine.hs  Affine.hs-boot  Proj.hs
lib/src/ZK/Algebra/Curves/BN128/Mont/: Fp.hs  Fr.hs
lib/src/ZK/Algebra/Curves/BN128/Std/: Fp.hs  Fr.hs
lib/src/ZK/Algebra/Reference/Pairing/: BLS12_381.hs  BN128.hs
lib/src/ZK/Algebra/ZK/Algebra/Curves/BLS12_381/Fr/: Std.hs
lib/src/ZK/Algebra/ZK/Algebra/Curves/BN128/Fp/: Mont.hs  Std.hs
lib/src/ZK/Algebra/ZK/Algebra/Curves/BN128/Fr/: Mont.hs  Std.hs
meta/: zikkurat-algebra-codegen.cabal
meta/cli/: Main.hs
meta/src/Zikkurat/: Generate.hs  Primes.hs
meta/src/Zikkurat/CodeGen/: BigInt.hs  FFI.hs  Misc.hs
meta/src/Zikkurat/CodeGen/Curve/: CurveFFI.hs  MontAffine.hs  MontJac.hs  MontProj.hs  Params.hs
meta/src/Zikkurat/CodeGen/PrimeField/: Montgomery.hs  (+1 more)
pure/: README.md  zikkurat-algebra-pure.cabal
pure/src/ZK/Algebra/Pure/: Curve.hs  Field.hs  Group.hs  Jacobi.hs  Misc.hs  NTT.hs  Poly.hs  Poly.hs-boot
pure/src/ZK/Algebra/Pure/Curve/: Class.hs  Cubic.hs  SomeCurves.hs
pure/src/ZK/Algebra/Pure/Field/: Class.hs  Impl.hs  SomeFields.hs  Sqrt.hs
pure/src/ZK/Algebra/Pure/Field/Impl/: Ext.hs  Prime.hs
pure/src/ZK/Algebra/Pure/Field/Raw/: Extension.hs  Generic.hs
pure/src/ZK/Algebra/Pure/Field/Synonyms/: All.hs  BLS12_377.hs  BLS12_381.hs  BN254.hs
pure/src/ZK/Algebra/Pure/Instances/: AllFields.hs  BLS12_377.hs  BLS12_381.hs  BN254.hs
pure/test/: Run.hs  TestMain.hs
pure/test/Field/: Properties.hs
test/: zikkurat-algebra-tests.cabal
test/cli/: TestMain.hs
test/src/ZK/Test/: Run.hs
test/src/ZK/Test/Curve/: Pairings.hs  Properties.hs
test/src/ZK/Test/Field/: AgainstRef.hs  Properties.hs  Ref_BLS12_381.hs  Ref_BN254.hs
test/src/ZK/Test/Platform/: Properties.hs
test/src/ZK/Test/Poly/: Properties.hs
