Cabal-Version:        2.4
Name:                 zikkurat-algebra-codegen
Version:              0.0.1
Synopsis:             Code generator for algebraic primitives used in zero-knowledge proofs

Description:          Generate specialized C code for algebraic primitives 
                      (finite fields, elliptic curves and polynomials) used 
                      in zero-knowledge proofs and related technologies.

License:              MIT OR Apache-2.0
License-files:        LICENSE-MIT
                      LICENSE-APACHE-2.0

Author:               Balazs Komuves
Copyright:            (c) 2023 Faulhorn Labs
Maintainer:           balazs.komuves (at) faulhornlabs (dot) com

Stability:            Experimental
Category:             Math, Cryptography
Tested-With:          GHC == 8.6.5, GHC == 9.0.1
Build-Type:           Simple

--------------------------------------------------------------------------------

Library 

  Build-Depends:        base >= 4 && < 5, 
                        filepath  >= 1.2,
                        directory >= 1.2,
                        zikkurat-algebra-pure == 0.0.1

  Exposed-Modules:      Zikkurat.Generate
                        Zikkurat.CodeGen.Poly
                        Zikkurat.CodeGen.Pointwise
                        Zikkurat.CodeGen.Curve.MontAffine
                        Zikkurat.CodeGen.Curve.MontProj
                        Zikkurat.CodeGen.Curve.MontJac
                        Zikkurat.CodeGen.Curve.MSM
                        Zikkurat.CodeGen.Curve.FFT
                        Zikkurat.CodeGen.Curve.Params
                        Zikkurat.CodeGen.Curve.CurveFFI
                        Zikkurat.CodeGen.PrimeField.StdRep
                        Zikkurat.CodeGen.PrimeField.Montgomery
                        Zikkurat.CodeGen.ExtField
                        Zikkurat.CodeGen.Towers
                        Zikkurat.CodeGen.FieldCommon
                        Zikkurat.CodeGen.BigInt
                        Zikkurat.CodeGen.Platform
                        Zikkurat.CodeGen.FFI
--                        Zikkurat.CodeGen.Expr
                        Zikkurat.CodeGen.Misc
                        Zikkurat.Primes

  Hs-Source-Dirs:       src

  Default-Language:     Haskell2010
  Default-Extensions:   CPP, BangPatterns

--------------------------------------------------------------------------------

Executable zikkurat-algebra-codegen

  Build-Depends:        base >= 4 && < 5, 
                        filepath >= 1.2,
                        zikkurat-algebra-codegen == 0.0.1

  main-is:              Main.hs

--  Other-Modules:        
--                        Paths_zikkurat_algebra_codegen
--                        PackageInfo_zikkurat_algebra_codegen
--
--  autogen-modules:      Paths_zikkurat_algebra_codegen
--                        PackageInfo_zikkurat_algebra_codegen

  Hs-Source-Dirs:       cli

  Default-Language:     Haskell2010
  Default-Extensions:   CPP, BangPatterns

--------------------------------------------------------------------------------

