Cabal-Version:        2.4
Name:                 zikkurat-algebra
Version:              0.0.1
Synopsis:             Algebraic primitives used in zero-knowledge proofs

Description:          Algebraic primitives (finite fields, elliptic curves
                      and polynomials) used in zero-knowledge proofs.

License:              MIT OR Apache-2.0
License-files:        LICENSE-MIT
                      LICENSE-APACHE-2.0

Author:               Balazs Komuves
Copyright:            (c) 2023 Faulhorn Labs
Maintainer:           balazs.komuves (at) faulhornlabs (dot) com

Stability:            Experimental
Category:             Math, Cryptography
Tested-With:          GHC == 8.6.5, GHC == 9.0.1
Build-Type:           Custom

source-repository head
  type:                git 
  location:            https://github.com/faulhornlabs/zikkurat-algebra

--------------------------------------------------------------------------------

custom-setup

  setup-depends:        base  >= 4 && < 5,
                        filepath  >= 1.2,
                        directory >= 1.2,
                        Cabal >= 2.4,
                        zikkurat-algebra-codegen == 0.0.1

--------------------------------------------------------------------------------

Library

  Build-Depends:        base >= 4 && < 5, 
                        random >= 1.1
                        
  Exposed-Modules:      ZK.Algebra.Class.Field
                        ZK.Algebra.Class.Curve
                        ZK.Algebra.BigInt.Types        
                        ZK.Algebra.BigInt.BigInt128
                        ZK.Algebra.BigInt.BigInt192
                        ZK.Algebra.BigInt.BigInt256
                        ZK.Algebra.BigInt.BigInt320
                        ZK.Algebra.BigInt.BigInt384
                        ZK.Algebra.BigInt.BigInt448
                        ZK.Algebra.BigInt.BigInt512
                        ZK.Algebra.Curves.BN128.Fp.Std
                        ZK.Algebra.Curves.BN128.Fr.Std
                        ZK.Algebra.Curves.BN128.Fp.Mont
                        ZK.Algebra.Curves.BN128.Fr.Mont
                        ZK.Algebra.Curves.BLS12_381.Fp.Std
                        ZK.Algebra.Curves.BLS12_381.Fr.Std
                        ZK.Algebra.Curves.BLS12_381.Fp.Mont
                        ZK.Algebra.Curves.BLS12_381.Fr.Mont
                        ZK.Algebra.Curves.BN128.G1.Affine
                        ZK.Algebra.Curves.BN128.G1.Proj
                        ZK.Algebra.Curves.BLS12_381.G1.Affine
                        ZK.Algebra.Curves.BLS12_381.G1.Proj
 
  c-sources:            cbits/bigint/bigint128.c
                        cbits/bigint/bigint192.c
                        cbits/bigint/bigint256.c
                        cbits/bigint/bigint320.c
                        cbits/bigint/bigint384.c
                        cbits/bigint/bigint448.c
                        cbits/bigint/bigint512.c
                        cbits/curves/fields/std/bn128_p_std.c
                        cbits/curves/fields/std/bn128_r_std.c
                        cbits/curves/fields/std/bls12_381_p_std.c
                        cbits/curves/fields/std/bls12_381_r_std.c
                        cbits/curves/fields/mont/bn128_p_mont.c
                        cbits/curves/fields/mont/bn128_r_mont.c
                        cbits/curves/fields/mont/bls12_381_p_mont.c
                        cbits/curves/fields/mont/bls12_381_r_mont.c
                        cbits/curves/g1/proj/bn128_G1_affine.c
                        cbits/curves/g1/proj/bn128_G1_proj.c
                        cbits/curves/g1/proj/bls12_381_G1_affine.c
                        cbits/curves/g1/proj/bls12_381_G1_proj.c

  Default-Language:     Haskell2010
  Default-Extensions:   CPP, BangPatterns

  Hs-Source-Dirs:       src

  include-dirs:         cbits/bigint
                        cbits/curves/fields/std
                        cbits/curves/fields/mont
                        cbits/curves/g1/proj/

  ghc-options:          -fwarn-tabs -fno-warn-unused-matches -fno-warn-name-shadowing -fno-warn-unused-imports                        

--------------------------------------------------------------------------------

