Cabal-Version:        2.4
Name:                 zikkurat-algebra
Version:              0.0.1
Synopsis:             Algebraic primitives used in zero-knowledge proofs

Description:          Algebraic primitives (finite fields, elliptic curves
                      and polynomials) used in zero-knowledge proofs.

License:              MIT OR Apache-2.0
License-files:        LICENSE-MIT
                      LICENSE-APACHE-2.0

Author:               Balazs Komuves
Copyright:            (c) 2023 Faulhorn Labs
Maintainer:           balazs.komuves (at) faulhornlabs (dot) com

Stability:            Experimental
Category:             Math, Cryptography
Tested-With:          GHC == 8.6.5, GHC == 9.0.1
Build-Type:           Simple

--------------------------------------------------------------------------------

source-repository head
  type:                git 
  location:            https://github.com/faulhornlabs/zikkurat-algebra

--------------------------------------------------------------------------------

Flag BN128 
  Description: Enable the BN128 elliptic curve
  Default:     True

Flag BLS12_381
  Description: Enable the BLS12-381 elliptic curve
  Default:     True

--------------------------------------------------------------------------------

Library

  Build-Depends:        base >= 4 && < 5, 
                        array >= 0.5,
                        random >= 1.1

  Exposed-Modules:      ZK.Algebra.Class.Flat
                        ZK.Algebra.Class.Field
                        ZK.Algebra.Class.Curve
                        ZK.Algebra.Class.Poly
                        ZK.Algebra.Class.FFT
                        ZK.Algebra.Helpers

  Exposed-Modules:      ZK.Algebra.BigInt.Types        
                        ZK.Algebra.BigInt.BigInt128
                        ZK.Algebra.BigInt.BigInt192
                        ZK.Algebra.BigInt.BigInt256
                        ZK.Algebra.BigInt.BigInt320
                        ZK.Algebra.BigInt.BigInt384
                        ZK.Algebra.BigInt.BigInt448
                        ZK.Algebra.BigInt.BigInt512
                        ZK.Algebra.BigInt.Platform

  if flag(BN128)
    Exposed-Modules:    ZK.Algebra.Curves.BN128.Fp.Std
                        ZK.Algebra.Curves.BN128.Fp.Mont
                        ZK.Algebra.Curves.BN128.Fp2.Mont
                        ZK.Algebra.Curves.BN128.Fp6.Mont
                        ZK.Algebra.Curves.BN128.Fp12.Mont
                        ZK.Algebra.Curves.BN128.Fr.Std
                        ZK.Algebra.Curves.BN128.Fr.Mont
                        ZK.Algebra.Curves.BN128.G1.Affine
                        ZK.Algebra.Curves.BN128.G1.Proj
                        ZK.Algebra.Curves.BN128.G1.Jac
                        ZK.Algebra.Curves.BN128.Poly

  if flag(BLS12_381)
    Exposed-Modules:    ZK.Algebra.Curves.BLS12_381.Fp.Std
                        ZK.Algebra.Curves.BLS12_381.Fp.Mont
                        ZK.Algebra.Curves.BLS12_381.Fp2.Mont
                        ZK.Algebra.Curves.BLS12_381.Fp6.Mont
                        ZK.Algebra.Curves.BLS12_381.Fp12.Mont
                        ZK.Algebra.Curves.BLS12_381.Fr.Std
                        ZK.Algebra.Curves.BLS12_381.Fr.Mont
                        ZK.Algebra.Curves.BLS12_381.G1.Affine
                        ZK.Algebra.Curves.BLS12_381.G1.Proj
                        ZK.Algebra.Curves.BLS12_381.G1.Jac
                        ZK.Algebra.Curves.BLS12_381.Poly

  c-sources:            cbits/platform.c
                        cbits/bigint/bigint128.c
                        cbits/bigint/bigint192.c
                        cbits/bigint/bigint256.c
                        cbits/bigint/bigint320.c
                        cbits/bigint/bigint384.c
                        cbits/bigint/bigint448.c
                        cbits/bigint/bigint512.c

  if flag(BN128)

    c-sources:          cbits/curves/fields/std/bn128_Fp_std.c
                        cbits/curves/fields/std/bn128_Fr_std.c
                        cbits/curves/fields/mont/bn128_Fp_mont.c
                        cbits/curves/fields/mont/bn128_Fp2_mont.c
                        cbits/curves/fields/mont/bn128_Fp6_mont.c
                        cbits/curves/fields/mont/bn128_Fp12_mont.c
                        cbits/curves/fields/mont/bn128_Fr_mont.c
                        cbits/curves/g1/affine/bn128_G1_affine.c
                        cbits/curves/g1/proj/bn128_G1_proj.c
                        cbits/curves/g1/jac/bn128_G1_jac.c
                        cbits/curves/poly/mont/bn128_poly_mont.c

  if flag(BLS12_381)

    c-sources:          cbits/curves/fields/std/bls12_381_Fp_std.c
                        cbits/curves/fields/std/bls12_381_Fr_std.c
                        cbits/curves/fields/mont/bls12_381_Fp_mont.c
                        cbits/curves/fields/mont/bls12_381_Fp2_mont.c
                        cbits/curves/fields/mont/bls12_381_Fp6_mont.c
                        cbits/curves/fields/mont/bls12_381_Fp12_mont.c
                        cbits/curves/fields/mont/bls12_381_Fr_mont.c
                        cbits/curves/g1/affine/bls12_381_G1_affine.c
                        cbits/curves/g1/proj/bls12_381_G1_proj.c
                        cbits/curves/g1/jac/bls12_381_G1_jac.c
                        cbits/curves/poly/mont/bls12_381_poly_mont.c

  Default-Language:     Haskell2010
  Default-Extensions:   CPP, BangPatterns

  Hs-Source-Dirs:       src

  include-dirs:         cbits
                        cbits/bigint
                        cbits/curves/fields/std
                        cbits/curves/fields/mont
                        cbits/curves/g1/affine
                        cbits/curves/g1/proj
                        cbits/curves/g1/jac
                        cbits/curves/poly/mont

  ghc-options:          -fwarn-tabs -fno-warn-unused-matches -fno-warn-name-shadowing -fno-warn-unused-imports                        

  if arch(aarch64)
    cpp-options:         -DARCH_AARCH64
  elif arch(x86_64)
    cpp-options:         -DARCH_X86_64
  else
    cpp-options:         -DARCH_UNKNOWN

--------------------------------------------------------------------------------

extra-source-files:     cbits/*.h,
                        cbits/*.c,
                        cbits/bigints/*.h,
                        cbits/bigints/*.c,
                        cbits/curves/fields/std/*.h,
                        cbits/curves/fields/std/*.c,
                        cbits/curves/fields/mont/*.h,
                        cbits/curves/fields/mont/*.c,
                        cbits/curves/g1/affine/*.h,
                        cbits/curves/g1/affine/*.c,
                        cbits/curves/g1/proj/*.h,
                        cbits/curves/g1/proj/*.c,
                        cbits/curves/g1/jac/*.h,
                        cbits/curves/g1/jac/*.c,
                        cbits/curves/poly/mont/*.h,
                        cbits/curves/poly/mont/*.c

--------------------------------------------------------------------------------

